# MiscellaneousStuff

./: README.md
AndroidProjects/OpenglTest1/: .project  settings.gradle
Automation/PrimeNumbers/: .gitignore  README.md  build.sh  index.js  nums.cpp  nums.h  sum_fd.cpp  sum_input.cpp  sum_simple.cpp  test.txt
C++/Boost/: README.md  apples.cfg  generic_vector.cpp  program_args.cpp
C++/ChuckNorrisFact/: .gitignore  CMakeLists.txt  README.md  build_chucknorris.py  chucknorris_ctypes.py  conanfile.txt
C++/ChuckNorrisFact/include/: ChuckNorris.hpp  chucknorris.h
C++/ChuckNorrisFact/java/: .project  pom.xml
C++/ChuckNorrisFact/java/src/main/java/com/chucknorris/app/: App.java  ChuckNorris.java
C++/ChuckNorrisFact/java/src/test/java/com/chucknorris/app/: AppTest.java  ChuckNorrisTest.java
C++/ChuckNorrisFact/python/: build_chucknorris.py  chucknorris.py  chucknorris_ctypes.py  setup.py
C++/ChuckNorrisFact/src/: ChuckNorris.cpp  c_wrapper.cpp  main.c  main.cpp
C++/MultiThreading/: basic.cpp  thread_guard.hpp
C/Data Structures/: queue.c
C/Profiling/: main.c
DesignPatterns/Command/: Restaurant.java
DesignPatterns/Decorator/: CoffeeShop.java
DesignPatterns/Singleton/: ThreadSafeSingleton.hpp  basicSingleton.hpp  genericSingleton.hpp  main.cpp
Go/basic/: basic.go
Java/: Logger.java  MyTaskExecutor.java  README.md
OpenCVC++/: CMakeLists.txt  test.cpp
SQL/: typeOfTriangle.sql
ThreeJs/: package-lock.json  package.json  tsconfig.json
ctf challenges/: bufferOverflow.c
djangoProjects/: .gitignore
linux-kernel/: .gitignore  README.md
(+106 files in other folders)
